--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "1.0.28",
   "dependencies": {
     "express": "^4.16.3",
+    "moment": "^2.24.0",
     "mongoose": "^5.1.5"
   },
   "devDependencies": {
